
syntax = "proto3";

option csharp_namespace = "Np.NotesService.Infrastructure.Messaging.Grpc.Relations";

service RelationsService {
    rpc GetNotesFromRoot(GetNotesFromRootRequest) returns (GetNotesFromRootResponse);

    rpc GetOutgoingRelations(GetOutgoingRelationsRequest) returns (GetOutgoingRelationsResponse);

    rpc GetIncomingRelations(GetIncomingRelationsRequest) returns (GetIncomingRelationsResponse);
}

message GrpcUuid {
    string value = 1;
}

message GetNotesFromRootRequest 
{
    GrpcUuid user_id=1;
}

message GetNotesFromRootResponse{
    repeated GrpcUuid note_ids = 1;
}

message GetOutgoingRelationsRequest{
    GrpcUuid note_id = 1;
}

message GetOutgoingRelationsResponse{
    repeated GrpcUuid note_ids=1;
}

message GetIncomingRelationsRequest{
    GrpcUuid note_id=1;
}

message GetIncomingRelationsResponse{
    repeated GrpcUuid note_ids=1;
}